src/objects/Case_BU__c.object
<CustomObject>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>Error code seen on the unit.</description>
        <inlineHelpText>Code identification that describes the cause of failure on unit</inlineHelpText>
        <label>Error Code</label>
        <picklist>
            <picklistValues>
                <fullName>DOA/DOI - unit dead at installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E001 - Current input above maximum threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E001 - Input OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E001 - String Input OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E002 - Input OV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E002 - Input Overvoltage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E003 - No parameters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E004 - Bulk OV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E004 - Voltage across capacitors above maximum threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E005 - Comm. Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E005 - Error in communication with the DSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E005 - Internal Comm error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E006 - Hardwired OC Fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E006 - Output current above maximum threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E006 - Output OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E007 - IGBT current above maximum threshold or an IGBT is saturated.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E007 - IGBT Sat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E009 - Internal Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E010 - Bulk low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E011 - Ramp Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E012 - DC/DC Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E013 - Wrong Input setting (single or dual channel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E013 - Wrong Mode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E014 - Overheating (detail visible from software )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E014 - Over Temp - Internal temp too high</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E015 - Bulk capacitor fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E015 - Bulk Cap Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E015 - Bulk Cap V Imbalance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E015 - Difference in voltage of DC condensers above maximum threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E016 - DC/AC Circuitry</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Partner_cost__c</fullName>
        <description>ABB SAP P.O value</description>
        <inlineHelpText>Channel  estimated cost to support ABBs product /services field / warranty requests</inlineHelpText>
        <label>External Partner cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used to denote time spent by department - used for billing to Mfg.</inlineHelpText>
        <label>FSE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <inlineHelpText>List of fault</inlineHelpText>
        <label>Fault Code</label>
        <picklist>
            <picklistValues>
                <fullName>0010 Short Circuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0020 PPCC/OPEXLink Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0030 Over/Undervoltage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0040 Earth Fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0050 Supply Phase Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0060 Motor Phase Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0070 Temperature Faults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0080 Braking Chopper Faults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0090 Over Current / Current Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0100 Fieldbus Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0110 I/O encoder or DDCS option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0120 Control Board Broken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0140 Control Panel Broken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0150 Unit is Dead (Fan or message)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0160 Explosion or Arc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0170 Choke, Filter or Transformer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0180 Cabinet (relay, DC-power, OESA, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0190 Application Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0200 Water Cooling Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0210 Incomplete delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0220 Transport damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0230 Safety Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0999 Other fault</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fault_sub_system__c</fullName>
        <inlineHelpText>If no suitable sub system is found choose Other</inlineHelpText>
        <label>Fault sub system</label>
        <picklist>
            <picklistValues>
                <fullName>AC Filter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Yard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aux Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Yard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prot. Relay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synchr. Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve enclosure</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Faulty_PartNumber__c</fullName>
        <description>ABB part number of the failed component. Applicable only if defective parts are involved.</description>
        <inlineHelpText>This is the Product Order code number</inlineHelpText>
        <label>Faulty Product Order code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Faulty_PartSerialNo__c</fullName>
        <description>Serial number of defective part. Applicable only if defective parts are involved.</description>
        <inlineHelpText>Unique identification of an ABB Product</inlineHelpText>
        <label>Faulty Part Serial No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Faulty_component_in_unit__c</fullName>
        <inlineHelpText>If no suitable sub system is found choose Other</inlineHelpText>
        <label>Faulty component in unit</label>
        <picklist>
            <picklistValues>
                <fullName>Bearing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resistor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiconductor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_visit_date__c</fullName>
        <description>Date when the field intervention has been scheduled</description>
        <inlineHelpText>Project based dates for Service and Modular Systems PGs</inlineHelpText>
        <label>Field visit date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forwarder_transportcostinvoiced_to_ABB__c</fullName>
        <description>ABB SAP P.O value</description>
        <inlineHelpText>Warranty costs for product handling from customer to ABB</inlineHelpText>
        <label>Forwarder transport cost invoiced to ABB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goods_of_mark__c</fullName>
        <inlineHelpText>Marking information on replacement/spare part</inlineHelpText>
        <label>Mark of goods</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goods_received_date__c</fullName>
        <description>Date of receiving replacement parts at site</description>
        <inlineHelpText>Warranty date on when defective product was return</inlineHelpText>
        <label>Goods received date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goodwill__c</fullName>
        <inlineHelpText>Warranty products or services free to customer</inlineHelpText>
        <label>Goodwill ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnection_point__c</fullName>
        <inlineHelpText>Interconnect point to site</inlineHelpText>
        <label>Interconnection point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <description>Identifying number for invoice received from 3rd party for work performed on behalf of ABB</description>
        <inlineHelpText>Status of invoice received from customer</inlineHelpText>
        <label>Invoice Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <inlineHelpText>Invoice number to which the customer is referring to</inlineHelpText>
        <label>Invoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiceable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Can we charge to customer for the Case?</inlineHelpText>
        <label>Invoiceable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Subtype__c</fullName>
        <description>Designates the specific nature of the case.</description>
        <inlineHelpText>Sub category for product defect</inlineHelpText>
        <label>Issue Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Clarification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Respond Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiend Intervention S/W F/W Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inoperable: Device: Field Serivce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inoperable: Device: Remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inoperable: Device: Rework Quotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inoperable: Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out-of-Box Claims - DOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Doc: Clarification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Doc: Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>L1_Request_for_credit_note_to_recover__c</fullName>
        <description>Credit Note no.</description>
        <inlineHelpText>The local unit needs to recover the local costs from the liable party of the warranty case (usually the PU)</inlineHelpText>
        <label>Request for Credit Note</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level1_Total_cost__c</fullName>
        <description>Summary of all costs carried at Level 1</description>
        <label>Level 1 Total cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level1_Warranty_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Level 1 decision</description>
        <inlineHelpText>Warranty assessment  approved or rejected</inlineHelpText>
        <label>Level 1 Warranty Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liable_party__c</fullName>
        <description>Party held responsible for the problem</description>
        <inlineHelpText>Entity which is responsible of the warranty case and therefore to cover the costs incurred</inlineHelpText>
        <label>Liable party</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Unit</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link_to_documentation__c</fullName>
        <inlineHelpText>Link out to ABB documentation source</inlineHelpText>
        <label>Link to documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Load_Current__c</fullName>
        <description>Specify load current in A</description>
        <inlineHelpText>Current absorbed by load used in combination with ABB product</inlineHelpText>
        <label>Load Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load_Power__c</fullName>
        <description>Specify load power in kW</description>
        <inlineHelpText>Power of the load used in combination with ABB product</inlineHelpText>
        <label>Load Power</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load_connection_type__c</fullName>
        <description>Specify load connection type.</description>
        <inlineHelpText>Connection type of the load used in combination with ABB product</inlineHelpText>
        <label>Load connection type</label>
        <picklist>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single phase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Load_starting_Time__c</fullName>
        <description>Specify load starting time in s</description>
        <inlineHelpText>Time to reach the full speed/functionality of the load used in combination with ABB product</inlineHelpText>
        <label>Load starting Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_service_engineerName__c</fullName>
        <inlineHelpText>Person who is performing work on site.</inlineHelpText>
        <label>Local service engineer name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_of_Capacity__c</fullName>
        <inlineHelpText>CIGREE requirement</inlineHelpText>
        <label>Loss of Capacity (MW)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAC_Address__c</fullName>
        <description>MAC Address related to ABB products</description>
        <inlineHelpText>Used for Monitoring product RMA&apos;s</inlineHelpText>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Noreturn_required__c</fullName>
        <description>Logistics &amp; SU Details</description>
        <inlineHelpText>Warranty product that need to be scrapped</inlineHelpText>
        <label>No return required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <inlineHelpText>Number of products (number of serial numbers) involved in the case</inlineHelpText>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_accessories__c</fullName>
        <description>Specify the number of accessory connected</description>
        <inlineHelpText>Number of accessories coupled to ABB product claimed (If any/foreseen)</inlineHelpText>
        <label>Number of accessories (if any)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_units_on_site__c</fullName>
        <inlineHelpText>Number of inverts on a site</inlineHelpText>
        <label>Number of units on site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observation_Date__c</fullName>
        <label>Observation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Observation_During__c</fullName>
        <label>Observation During</label>
        <picklist>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Onsite_completiondate__c</fullName>
        <description>Customer requested completion date for project activities</description>
        <label>On-site completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operational_Voltage_Ue__c</fullName>
        <description>Specify Operationa voltage in V</description>
        <inlineHelpText>ABB product claimed operational voltage</inlineHelpText>
        <label>Operational Voltage (Ue)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Type of order needed - RMA, FSE, Parts Order, etc.</description>
        <inlineHelpText>Denotes RMA, Field Service, Parts order, etc.</inlineHelpText>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>FSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSE &amp; Parts Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSE &amp; RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verengo FSE LA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_ABB_Contacts__c</fullName>
        <description>Other local ABB contacts</description>
        <inlineHelpText>Contact person from Local ABB unit</inlineHelpText>
        <label>Other ABB Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overload_protection_presence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specify if overload protection is present</description>
        <inlineHelpText>If any/foreseen, check the presence of overload protection</inlineHelpText>
        <label>Overload protection presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCS_Block__c</fullName>
        <description>Site locator for ABB utility customers</description>
        <inlineHelpText>Used for Utility Customers as a unit locator</inlineHelpText>
        <label>PCS/Block</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POnumber_replacement__c</fullName>
        <description>ABB SAP P.O number</description>
        <inlineHelpText>Warranty - Number of purchase order used  to replace a product in the field.</inlineHelpText>
        <label>P.O number replacement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PU_Costsunder_goodwill__c</fullName>
        <description>PU Total cost for the case</description>
        <inlineHelpText>If the case is assessed not to be a warranty, cost value that the factory is willing to cover under a goodwill agreement</inlineHelpText>
        <label>PU Costs under goodwill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PU_Goodwill__c</fullName>
        <description>PU share of the Total Cost</description>
        <inlineHelpText>If the case is assessed not to be a warranty, % of the cost that the factory is willing to cover under a goodwill agreement</inlineHelpText>
        <label>PU Goodwill (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing_List__c</fullName>
        <inlineHelpText>Shipment packing list</inlineHelpText>
        <label>Packing List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <inlineHelpText>Unit Material Number in Install base</inlineHelpText>
        <label>Part Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parts_OrderNo_BOLlinktoorder__c</fullName>
        <description>BOL order in case of out of warranty or as the case may be.Only applicable if parts ordering is involved.</description>
        <inlineHelpText>Purchase order of Spare parts replacement in BOL or similar system</inlineHelpText>
        <label>Parts Order No / BOL link to order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pcs__c</fullName>
        <inlineHelpText>Quantity of products affected by case</inlineHelpText>
        <label>Pcs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_date_foroutage_forresolution__c</fullName>
        <inlineHelpText>Calendar date; used for alerts and task escalation</inlineHelpText>
        <label>Planned date for outage for resolution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Power_Station__c</fullName>
        <description>Additional site locator for ABB Utility customers</description>
        <inlineHelpText>Used for Utility Customers as a unit locator</inlineHelpText>
        <label>Power-Station</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presence_of_accessories__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specify if any accessory is connected</description>
        <inlineHelpText>If any/foreseen, check the presence of accessories coupled to ABB product claimed</inlineHelpText>
        <label>Presence of accessories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <picklist>
            <picklistValues>
                <fullName>@ A Glance application assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Investigation - No Error Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Investigation - Unable to Verify Claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Help Screens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archival Retrieval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad quality points from a PCU, MODULE or CONSOLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Application Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken or Damaged parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can not login to NGIS account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier Did Not Pick Up Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Network Problem (Harmony/I-90)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compatability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compiling and Linking questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CON Backup/Restore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration of graphics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration of tags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CON Import/Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console CRT problem/failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console Floppy disk problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console hard drive issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console logging problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console Networking Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console Redundancy and Client operational problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console Security Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console software installation problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console tape drive problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console trending configuration/problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console will not boot</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Product Code for each Order Line Number</description>
        <inlineHelpText>Code of the product/s for what the customer is asking to raise a case</inlineHelpText>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Issue_No__c</fullName>
        <inlineHelpText>Associated with current Knowledge base; Library documentation</inlineHelpText>
        <label>Product Issue No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>